# coco-dataset

./: .dockerignore  .gitignore  Dockerfile  README.md  docker_build.sh  pyproject.toml
src/coco_dataset/: __init__.py
src/coco_dataset/dataset/: __init__.py  dataset_builder.py  s3_path_parser.py
src/coco_dataset/dataset/coco_dataset/: __init__.py  annotation.py  category.py  dataset.py  detection.py  download.py  image.py  info.py  license.py
src/coco_dataset/dataset/db_queries/: __init__.py  base_query_builder.py  db_client.py  utils.py
src/coco_dataset/utils/: __init__.py  base_model.py  timer.py  url.py
workflows/: custom.py  example.py
