[tool.poetry]
name = "coco-dataset"
version = "0.1.0"
description = ""
authors = ["G <g.castro@degould.com>"]
readme = "README.md"

packages = [{ include = "coco_dataset", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
flytekit = "^1.5.0"
pydantic = "^1"
loguru = "^0.7.2"
tqdm = "^4.66.1"
pymssql = "^2.2.10"


[[tool.poetry.source]]
name = "private"
url = "https://private-site.com/pypi/ml/simple/"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
